# nekohasekai

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  MANIFEST.in  Makefile  README.md  aws-rules.json  aws-rules.srs  client-config.json  cloudflare-ip-rules.json  cloudflare-ip-rules.srs  docker-compose.yml  facebook-ip-rules.json  facebook-ip-rules.srs  facebook-rules.srs  generate-uuid-and-keys.sh  geoip.db  geosite.db  github-ip-rules.srs  include-domain-minlaxz.lst  include-domain-oonimm.lst  include-ip-minlaxz.lst  include-ip-oonimm.lst  my-rules.json  my-rules.srs  pyproject.toml  ruleset-domain-minlaxz.json  ruleset-domain-minlaxz.srs  ruleset-domain-oonimm.json  ruleset-domain-oonimm.srs  ruleset-ip-minlaxz.json  ruleset-ip-minlaxz.srs  ruleset-ip-oonimm.json  ruleset-ip-oonimm.srs  sample.env  server-config.json  start-server.sh  twitter-rules.json  twitter-rules.srs
api/: Dockerfile  README.md  sing-box-template  sing-box-template-v11
app/: data.yaml  docker-compose.yml  sample.env
bridge/: Dockerfile  README.md  docker-compose.yml  sample.env  sing-box-template  sing-box-template-v11
controller/: Dockerfile  config.py  database.db  entrypoint.sh  generate-base64_16.sh  generate-certificate.sh  generate-uuid.sh  gunicorn.conf.py  requirements.txt  wsgi.py
docker/: aws-ecs-task-definition.json  generate.sh  sing-box-template
failed-domains/: minlaxz.lst
fscarmen-sb/: Dockerfile  README.md  aws-ecs-task-definition.json  docker-compose.example-ec2.yml  docker-compose.yml  docker-init.sh  generate.sh  sing-box-template
generator/: README.md  app.py  client.template.json  core.py  helpers.py  requirements.txt  users.jsonc
headscale/: docker-compose.yml  sample.env
nekohasekai/: Dockerfile  README.md  common.py  config.yaml  constants.py  docker-compose.yml  generator.py  hysteria2.py  init.sh  main.py  sample.env  shadowsocks.py  shadowtls.py  trojan.py  utils.py
ooni/: probe.py  resolver.py
reverse-proxy/: docker-compose.yml  setup.sh
rules/: facebook-rules.json  github-ip-rules.json  include-rule-list.txt  my-ip-rules.json  my-ip.json  my-rules.json  probe.py  resolver.py  route  sing-box-template-v11
sbt/: route  sing-box-template  sing-box-template-v11
scaffolds/: cli.py  docker-compose-caddy.yaml  docker-compose.yaml  sample.api.env  (+3 more)
(+206 files in other folders)
