[build-system]
requires = ["setuptools==68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sekai_generator"
version = "1.3.0"
description = "CLI generator for sing-box configuration files"
readme = "generator/README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Min Min Latt", email = "minminlaxz@gmail.com" }
]

dependencies = [
  "typer>=0.12.0",
  "pyyaml>=6.0",
  "cryptography>=46.0.5"
]

[project.urls]
Homepage = "https://github.com/minlaxz/nekohasekai"
Repository = "https://github.com/minlaxz/nekohasekai"
Issues = "https://github.com/minlaxz/nekohasekai/issues"

[project.scripts]
sekai-generator = "generator.app:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["generator"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
generator = [
  "data/*.json",
  "data/*.jsonc",
  "data/*.yaml",
  "scripts/*.sh"
]

[tool.setuptools.exclude-package-data]
generator = ["__pycache__", "*.pyc", "*.pyo", "*.pyd"]
